tests/cases/syntax/error/process/par-w-empty-seq.soccam
;; par-w-empty-seq.soccam
;; Tests: 'seq' should not be empty.
(module par-w-empty-seq soccam
  (proc foo () 
    (decl ([x int]) 
      (par (seq))))
)
